# nba-game-webscraper

./: .gitignore  README.md  pyproject.toml
data/: thunder_games.csv
nba_game_webscraper/: grab_games_from_nba_site.py  push_to_google_calendar.py  thunder_game.py
scripts/: parse_games_from_html.py  push_to_google_calendar.py
