[tool.poetry]
name = "okc-thunder-calendar"
version = "0.1.0"
description = ""
authors = ["jgrugru <jeff.gruenbaum@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.2"
pydantic = "^2.8.2"
gcsa = "^2.3.0"
devtools = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
