[project]
name = "okc-thunder-calendar"
version = "0.0.1"
description = "Webscraping tool to grab NBA games from nba.com and format into a csv."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "pandas>=2.2.2",
    "pydantic>=2.8.2",
    "gcsa>=2.3.0",
    "devtools>=0.12.2",
    "selenium>=4.23.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
